syntax = "proto3";

option java_package = "com.eblan.launcher.data.datastore.proto.appdrawer";
option java_multiple_files = true;

message AppDrawerSettingsProto {
  int32 appDrawerColumns = 1;
  int32 appDrawerRowsHeight = 2;
}