syntax = "proto3";

import "com/eblan/launcher/data/datastore/proto/appdrawer/app_drawer_settings.proto";
import "com/eblan/launcher/data/datastore/proto/home/home_settings.proto";
import "com/eblan/launcher/data/datastore/proto/gesture/gesture_settings.proto";

option java_package = "com.eblan.launcher.data.datastore.proto";
option java_multiple_files = true;

message UserDataProto {
  HomeSettingsProto homeSettingsProto = 1;

  AppDrawerSettingsProto appDrawerSettingsProto = 2;

  GestureSettingsProto gestureSettingsProto = 3;
}
